# traffy-data-pipeline

./: .env.template  .gitignore  README.md  docker-compose.yml  kibana.md  pyproject.toml
ai-ml/: data.ipynb  dsde-project.ipynb  preprocessing.ipynb
ml/: data.ipynb
pipeline/: main.py
pipeline/airflow/: main.py  message_count.py
pipeline/config/: config.py
pipeline/kafka/: __init__.py  producer.py
pipeline/kafka_client/: __init__.py  comsumer.py  producer.py  schema.avsc  schema.py
pipeline/spark/: main.py  schema.py  transforms.py  write.py
pipeline/stream/: __init__.py  main.py  visualize.ipynb
viz/: dashboard.py  visualize.ipynb
webapp/: .gitignore  main.py  utils.py
webscrape/: scrape.ipynb
