[project]
name = "traffy-data-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "kafka-python (>=2.1.5,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "avro (>=1.12.0,<2.0.0)",
    "pyspark (>=3.5.5,<4.0.0)",
    "apache-airflow (==3.0.0)",
    "apache-airflow-providers-apache-spark (>=5.2.1,<6.0.0)"
]

[tool.poetry]
packages = [
    { include = "pipeline" }
]

[tool.poetry.scripts]
setup = "pipeline.main:main"
stream = "pipeline.stream.main:main"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
